HW2/part4/t47.output
running e2c
no such variable ~k on line 17
compiling the C generated code
t47.c: In function ‘main’:
t47.c:4:1: warning: useless type name in empty declaration
 int ;
 ^
t47.c:5:2: error: expected expression before ‘=’ token
  = 23;
  ^
t47.c:6:11: error: expected expression before ‘)’ token
 if( 0 >= ()){
           ^
t47.c:8:1: error: expected ‘}’ before ‘else’
 else {int ;
 ^
t47.c:8:1: warning: useless type name in empty declaration
t47.c:9:2: error: expected expression before ‘=’ token
  = 999;
  ^
t47.c:10:15: error: expected expression before ‘)’ token
 printf("",  - );
               ^
t47.c:11:11: error: expected expression before ‘)’ token
 if( 0 >= ()){
           ^
t47.c:12:8: warning: zero-length gnu_printf format string [-Wformat-zero-length]
 printf("", 1111);
        ^
t47.c:13:1: error: expected ‘}’ before ‘else’
 else {int ;
 ^
t47.c:13:1: warning: useless type name in empty declaration
t47.c:14:2: error: expected expression before ‘=’ token
  = 8888;
  ^
t47.c:15:2: error: expected expression before ‘=’ token
  = 44;
  ^
t47.c:16:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:17:2: error: expected expression before ‘=’ token
  = 11;
  ^
t47.c:18:2: error: expected expression before ‘=’ token
  =  - 10000;
  ^
t47.c:20:1: warning: useless type name in empty declaration
 int ;
 ^
t47.c:21:2: error: expected expression before ‘=’ token
  = 77;
  ^
t47.c:22:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:23:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:24:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t47.c:25:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:26:2: error: expected expression before ‘=’ token
  =  - 1;
  ^
t47.c:27:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:28:2: error: expected expression before ‘=’ token
  =  - 100;
  ^
t47.c:29:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:30:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:31:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:32:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:33:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:34:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:35:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:36:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:37:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:38:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:39:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:40:12: error: expected expression before ‘)’ token
 printf("", );
            ^
t47.c:41:1: error: expected declaration or statement at end of input
 }
 ^
t47.c:41:1: error: expected declaration or statement at end of input
t47.c:41:1: error: expected declaration or statement at end of input
